--- a/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
@@ -23,7 +23,8 @@
 
 #### 1.3 技能是亮剑资本
 - 人生在发展过程中，很多时候都需要毫不犹豫地向别人展示自己的实力，要敢于展示，善于展示，拥有自己的技能地图，这就是“亮剑”。
-- 既然具备了“亮剑”的意识，那么，下一步你就要考虑到亮什么剑：我到底拿什么资本给人家看？“亮剑”的资本又在哪里？因此，我们需要绘制自己的技能地图，不断地完善地图上的点……
+- 既然具备了“亮剑”的意识，那么，下一步你就要考虑到亮什么剑：我到底拿什么资本给人家看？“亮剑”的资本又在哪里？
+- 因此，我们需要绘制自己的技能地图，不断地完善地图上的点……
 
 
 
@@ -31,7 +32,7 @@
 
 
 ### 02.技能的不同维度
-#### 2.1 
+#### 2.1 技能学习维度
 - 在技能地图中，需要先开启和点亮哪些部分呢？回顾过去的经历并结合现实的需要，可以从如下四个不同程度的维度来说明：了解；掌握；熟练；精通。
 - 了解，相对掌握不是必需，但也需要达到知其然的程度，甚至知其所以然更好。
 - 掌握，意味着是一开始就要求熟练掌握的硬技能，这是生存之本。而至于掌握的深度，是动态的，倒是可以在行进过程中不断去迭代加深。
@@ -47,7 +48,7 @@
 
 
 #### 3.2 通用能力
-- 影响力，能达到部门级范围影响力以及较好的口碑。
+- 影响力，能达到部门级范围影响力以及较好的口碑。在技术或者专业素质上被认可。
 - 领导力：能够预见和管理项目风险，协调团队资源，推进项目上线。
 - 协调力：项目涉及跨团队资源协调，具备计划制定与风险控制能力。
 - 自驱力：具备很强的驱能力，能在无人督促下自我管理，不断的去完善和优化。
