--- a/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
@@ -531,4 +531,6 @@
     - https://mp.weixin.qq.com/s/_Z6GdGRVWq-_JXf5Fs6fsw
 - Android SIGQUIT(3) 信号拦截与处理
     - https://mp.weixin.qq.com/s?__biz=Mzg4MjE5OTI4Mw==&mid=2247494779&idx=1&sn=b8c84e8e8389543cfbda93cbadd1593c&chksm=cf58f3e7f82f7af1ffff70e1c9f2d6a6a0d0a4b5e4f3f3dd42e9d79fd950bfa32913942ec6d3&scene=178&cur_album_id=2495132597375975425#rd
+- 今日头条 ANR 优化实践系列 - 监控工具与分析思路
+    - https://juejin.cn/post/6942665216781975582
 
