--- a/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
@@ -242,6 +242,7 @@
 
 ### 参考博客
 - App内存泄露测试方法总结：https://blog.csdn.net/wjky2014/article/details/119258886
-
+- 抖音 Android 性能优化系列: Java 内存优化篇
+    - https://juejin.cn/post/6908517174667804680
 
 
