--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -374,6 +374,11 @@
 - https://blog.csdn.net/u011578734/article/details/110002688
 - https://github.com/bingoogolapple/AppInit
 - https://github.com/aiceking/AppStartFaster
-
+- 抖音 Android 性能优化系列：启动优化之理论和工具篇
+    - https://juejin.cn/post/7058080006022856735
+- 抖音 Android 性能优化系列：启动优化实践
+    - https://juejin.cn/post/7080065015197204511
+- 货拉拉用户端体验优化--启动优化篇
+    - https://juejin.cn/post/7087773731061235743
 
 
