--- a/Read/ReadMeWiki/00.方案实践/18.App稳定性专项实践.md
+++ b/Read/ReadMeWiki/00.方案实践/18.App稳定性专项实践.md
@@ -40,9 +40,12 @@
 
 ### 01.稳定性背景说明
 #### 1.1 项目背景
-- 随着团队和业务快速增长，用户量的提升，各种各样的问题频繁报漏，线上问题多次发生，耗资源、失用户，稳定性的要求也越来越高，我们必须思考改如何从稳定性的角度来保证我们的质量。
-- 稳定的软件系统是研发工作的职能和责任。但另一方面，业务的复杂度提升和用户设备的差异性也给客户端的稳定性和代码的可维护性带来了很大的挑战。客户端的稳定性建设工作在业务发展的过程中越来越受到重视。
-- 稳定性优化就是降低Crash率，但其实稳定性优化还有一个重要的维度就是业务的高可用。业务的不可用可能不会导致崩溃，但是会降低用户的体验，从而直接影响我们的收入。
+- 各种各样的问题频繁报漏
+    - 随着团队和业务快速增长，用户量的提升，线上问题多次发生，耗资源、失用户，稳定性的要求也越来越高，必须思考改如何从稳定性的角度来保证我们的质量。
+- 稳定的软件系统是研发工作的职能和责任
+    - 业务的复杂度提升和用户设备的差异性也给客户端的稳定性和代码的可维护性带来了很大的挑战。客户端稳定性建设工作在业务发展的过程中越来越受到重视。
+- 稳定性优化就是降低Crash率吗
+    - 但其实稳定性优化还有一个重要的维度就是业务的高可用。业务的不可用可能不会导致崩溃，但是会降低用户的体验，从而直接影响我们的收入。
 
 
 #### 1.2 什么是稳定性
@@ -313,9 +316,12 @@
 
 
 #### 7.4 异常快速止损
-
-
-
+- 西瓜视频稳定性建设
+    - https://juejin.cn/post/6953430618726203399
+    - https://mp.weixin.qq.com/s/DWOQ9MSTkKSCBFQjPswPIQ
+- 货拉拉Android稳定性治理
+    - https://juejin.cn/post/7100743641953468452
+    - https://blog.51cto.com/u_15233911/2826427
 
 
 
