--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -513,6 +513,8 @@
 #### 5.8 参考博客和文档
 - TLS/SSL认证以及客户端证书导入方法
     - http://t.zoukankan.com/blogs-of-lxl-p-10136582.html
+- 货拉拉SSL证书踩坑之旅
+    - https://juejin.cn/post/7186837003026038843
 
 
 
