--- a/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
@@ -214,7 +214,7 @@
 
 ### 07.功能组件库的介绍
 #### 7.1 功能组件层概括
-
+- 组件化初始化：https://github.com/bingoogolapple/AppInit
 
 #### 7.2 功能组件说明
 |功能组件库地址|库说明|功能介绍|
