--- a/Read/ReadMeWiki/01.大型方案/03.ServiceLoader实践.md
+++ b/Read/ReadMeWiki/01.大型方案/03.ServiceLoader实践.md
@@ -113,3 +113,6 @@ SPI原理图
 - JavaSPI机制学习笔记：https://www.cnblogs.com/lovesqcc/p/5229353.html
 - 高级开发必须理解的Java中SPI机制：https://www.jianshu.com/p/46b42f7f593c
 - https://www.jb51.net/article/205636.htm
+- spi通信交互
+    - https://github.com/luqinx/sp
+    - https://juejin.cn/post/6872335132229894158
