--- a/Read/ReadMeWiki/01.大型方案/47.Hook疑难问题实践.md
+++ b/Read/ReadMeWiki/01.大型方案/47.Hook疑难问题实践.md
@@ -30,6 +30,8 @@
 
 - ASM hook隐私方法调用，防止App被下架
     - https://juejin.cn/post/7043399520486424612
+- hook库
+    - https://github.com/eleme/lancet
 
 
 
