--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -226,6 +226,20 @@
 
 
 - https://juejin.cn/post/6844903862516580359
+- 一线大厂中的大型App全套性能优化实战方案
+    - https://github.com/liuyangbajin/Performance
+- tts
+    - https://github.com/gotev/android-speech
+- 蓝牙
+    - https://github.com/kongzue/BTLinker
+    - https://github.com/Jasonchenlijian/FastBle
+- Wi-Fi
+    - https://github.com/kongzue/WifiLinker
+    - https://github.com/kongqw/AndroidWiFiManager
+    - https://github.com/leavesCZY/WifiFileTransfer
+- 系统分享
+    - https://www.jianshu.com/p/28f25dcf81cd
+
 
 
 
