--- a/Read/ReadMeWiki/06.Framework/04.Android消息机制.md
+++ b/Read/ReadMeWiki/06.Framework/04.Android消息机制.md
@@ -7,9 +7,8 @@
 - 02.Handler使用介绍
     - 2.1 Handler基础使用
     - 2.2 解决handler内存泄露
-    - 2.3 
 - 03.子线程的消息处理
-    - 3.1 在子线程中定义Handler
+    - 3.1 子线程中定义Handler
     - 3.2 不建议在子线程访问UI
     - 3.3 子线程更新UI方式
 - 04.消息机制源码分析
@@ -40,9 +39,7 @@
 
 #### 1.2 Handler消息类型
 - Handler的Message种类分为三种：
-    - 普通消息
-    - 异步消息
-    - 屏障消息
+    - 1.普通消息；2.异步消息；3.屏障消息
 - 普通消息
     - 普通消息又称为同步消息，我们平时发的消息基本都是同步消息。
 - 异步消息
@@ -90,7 +87,7 @@
 
 
 ### 03.子线程的消息处理
-#### 3.1 在子线程中定义Handler
+#### 3.1 子线程中定义Handler
 - 直接在子线程中创建handler，看看会出现什么情况？
     - 运行后可以得出在子线程中定义Handler对象出错，难道Handler对象的定义或者是初始化只能在主线程中？
     - 其实不是这样的，错误信息中提示的已经很明显了，在初始化Handler对象之前需要调用Looper.prepare()方法。
