--- a/Read/ReadMeWiki/06.Framework/07.WMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framework/07.WMS机制深入分析.md
@@ -25,6 +25,7 @@
     - 5.1 addView和removeView
 
 
+
 ### 01.快速了解WMS机制
 #### 1.1 WMS是什么
 - 开发中各种UI显示异常的bug都可以在WMS体系中找到对应的解决办法和对应原理。
@@ -294,7 +295,8 @@
     - https://copyfuture.com/blogs-details/202112111524292567
 - Android | WMS 解析（一）
     - https://www.ngui.cc/article/show-640926.html
-
+- Android系统服务-WMS
+    - https://www.jianshu.com/p/4d34edb6b054
 
 
 
