--- a/Read/ReadMeWiki/02.性能工具/01.Android性能监测.md
+++ b/Read/ReadMeWiki/02.性能工具/01.Android性能监测.md
@@ -11,6 +11,25 @@
 
 
 # 优秀文档：https://www.androidperformance.com/2018/05/07/Android-performance-optimization-skills-and-tools/
+#### 1.3 性能监控框架
+- 首先是异常崩溃方面的，另外则是性能监控方面的，但是他们整体是划分在一起的，都属于线上性能监控体系的。
+- Crash相关的，可以从爱奇艺的xCrash学起。包含了崩溃日志，ANR以及native crash，因为版本适配的问题ANR在高版本上已经不是这么好捞了，还有就是native crash相关的。是一个非常牛逼的库了。
+    - https://github.com/iqiyi/xCrash
+- 线上的性能监控框架可以从腾讯的Matrix学起, Matrix首页上也有介绍，比如fps，卡顿，IO，电池，内存等等方面的监控。其中卡顿监控涉及到的就是方法前后插桩，同时要有函数的mapping表，插桩部分整体来说比较简单感觉。
+    - https://github.com/Tencent/matrix
+- 关于线上内存相关的，推荐各位可以学习下快手的koom, 对于hprof的压缩比例听说能达到70%，也能完成线上的数据回捞以及监控等等，是一个非常屌的框架。
+    - https://github.com/KwaiAppTeam/KOOM
+- 其实上述几个库都还是有一个本质相关的东西，那么就是plthook,这个上面三个库应该都有对其的使用，之前是爱奇艺的xhook，现在是字节的bhook, 这个大佬也是我的偶像之一了，非常离谱了算是。
+    - https://github.com/iqiyi/xHook
+    - https://github.com/bytedance/bhook
+- Android 性能采集之Fps,Memory,Cpu 和 Android IO监控。
+    - https://juejin.cn/post/6890754507639095303
+    - https://juejin.cn/post/6900810600188739592
+- kotlin
+    - https://juejin.cn/post/7103011782591004680#heading-77
+
+
+
 
 ### 00.性能检测
 ### 0.1 性能优化原则
