--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -12,6 +12,8 @@
 - 03.窗口Window创建
     - 3.1 Activity和Window
     - 3.2 窗口Window创建过程
+    - 3.3 Window显示过程
+    - 3.4 Dialog中Window创建
 - 04.视图View创建
     - 4.1 视图View的介绍
     - 4.2 DecorView类实现
@@ -33,6 +35,8 @@
 #### 1.2 Activity组件类关系
 - Activity组件的类关系图
     - ![image](https://img-blog.csdnimg.cn/6d7a25acd0d44157b2d177fb3616ec53.png)
+- 从启动到Activity创建Window的整体流程
+    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMzE3ODMx)
 - Activity类与Context关系
     - Activity类是从ContextThemeWrapper类继承下来的，而ContextThemeWrapper类又是从ContextWrapper类继承下来的，最后ContextWrapper类又继承了Context类。
     - 这个ContextImpl对象首先是通过调用Activity类的成员函数attach传递到Activity组件内部，接着再依次通过调用父类ContextThemeWrapper和ContextWrapper的成员函数attachBaseContext来分别保存在它们的成员变量mBase中。
@@ -87,6 +91,14 @@
 - Context创建流程
     - 通过ActivityThread类的成员函数performLaunchActivity在应用程序进程中创建一个Activity实例，并且为它设置运行上下文环境，即为它创建一个ContextImpl对象。
     - ![image](https://img-blog.csdnimg.cn/31f9b74ee10644a4ac6ce2952d567c93.png)
+- 比较重要的流程介绍
+    >ActivityThread.handleLaunchActivity()
+    >ActivityThread.performLaunchActivity()
+        >mInstrumentation.newActivity 使用反射创建Activity
+        >activity.attach 这里会调用Activity中attach方法
+    >Activity.attach()
+         >mWindow = new PhoneWindow 这里创建所属的PhoneWindow
+         >mWindow.setWindowManager  设置并获取 WindowManagerImpl 对象
 - Android应用程序窗口的运行上下文环境的创建过程
     - 第一步：ActivityThread#performLaunchActivity()，主要看mInstrumentation.newActivity()的过程。Instrumentation类是用来记录应用程序与系统的交互过程的
         - 要启动的Activity组件的类名保存在变量component。有了这个类名之后，函数就可以调用ActivityThread类的成员变量mInstrumentation所描述一个Instrumentation对象的成员函数newActivity来创建一个Activity组件实例了，并且保存变量activity中。
@@ -134,7 +146,8 @@
     - ![image](https://img-blog.csdnimg.cn/8bdde1f9e8bb440fbf636691ceff94e5.png)
 - Window和PhoneWindow的类关系图。
     - ![image](https://img-blog.csdnimg.cn/b472e7810dac425cbc873a8d13efb672.png)
-
+- Window创建流程图如下所示
+    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMjExNDkz)
 
 
 #### 3.2 窗口Window创建过程
@@ -162,6 +175,52 @@
     - 这个类型为PhoneWindow的应用程序窗口是通过一个类型为LocalWindowManager的本地窗口管理器来维护的。
     - 这个类型为LocalWindowManager的本地窗口管理器又是通过一个类型为WindowManagerImpl的窗口管理器来维护应用程序窗口的。
     - 这个类型为PhoneWindow的应用程序窗口内部有一个类型为DecorView的视图对象，这个视图对象才是真正用来描述一个Activity组件的UI的。
+
+
+#### 3.3 Window显示过程
+- Window显示流程图如下所示。主要是讲解activity中Window显示过程
+    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMjUyOTk1)
+- 大概重要流程介绍
+    >ActivityThread.handleResumeActivity()
+    >ActivityThread.performResumeActivity()     执行到 onResume()
+    >r.activity.makeVisible()   添加视图
+    >Activity.makeVisible()     
+         >wm.addView   将decorView添加到Window窗口上
+         >mDecor.setVisibility(View.VISIBLE)    设置mDecor可见
+- WindowManager的addView流程
+    - WindowManager 的 addView 的具体实现在 WindowManagerImpl 中，而 WindowManagerImpl 的 addView 又会调用 WindowManagerGlobal.addView()。
+- WindowManagerGlobal.addView()
+    ``` java
+    public void addView(View view, ViewGroup.LayoutParams params,Display display, Window parentWindow) {
+        ViewRootImpl root = new ViewRootImpl(view.getContext(), display);        
+        view.setLayoutParams(wparams);    
+        mViews.add(view);    
+        mRoots.add(root);    
+        mParams.add(wparams);        
+        root.setView(view, wparams, panelParentView);
+    }
+    ```
+    - 这个过程创建一个 ViewRootImpl，并将之前创建的 DecoView 作为参数传入，以后 DecoView 的事件都由 ViewRootImpl 来管理了，比如，DecoView 上添加 View，删除 View。ViewRootImpl 实现了 ViewParent 这个接口，这个接口最常见的一个方法是 requestLayout()。
+    - ViewRootImpl 是个 ViewParent，在 DecoView 添加的 View 时，就会将 View 中的 ViewParent 设为 DecoView 所在的 ViewRootImpl，View 的 ViewParent 相同时，理解为这些 View 在一个 View 链上。所以每当调用 View 的 requestLayout()时，其实是调用到 ViewRootImpl，ViewRootImpl 会控制整个事件的流程。可以看出一个 ViewRootImpl 对添加到 DecoView 的所有 View 进行事件管理。
+
+
+#### 3.4 Dialog中Window创建
+- Dialog的Window创建过程?
+    - 创建Window——同样是通过PolicyManager的makeNewWindow方法完成，与Activity创建过程一致
+    - 初始化DecorView并将Dialog的视图添加到DecorView中——和Activity一致(setContentView)，同样是通过Window.setContentView() 来实现。
+    - 将DecorView添加到Window中并显示——在Dialog的show方法中，通过WindowManager将DecorView添加到Window中(mWindowManager.addView(mDecor, 1))
+    - Dialog关闭时会通过WindowManager来移除DecorView：mWindowManager.removeViewImmediate(mDecor)
+    - Dialog必须采用Activity的Context，因为有应用token(Application的Context没有应用token)，也可以将Dialog的Window通过type设置为系统Window就不再需要token。
+- 为什么Dialog不能用Application的Context？
+    - Dialog本身的Token为null，在初始化时如果是使用Application或者Service的Context，在获取到WindowManager时，获取到的token依然是null。
+    - Dialog如果采用Activity的Context，获取到的WindowManager是在activity.attach()方法中创建，token指向了activity的token。
+    - 因为通过Application和Service的Context将无法获取到Token从而导致失败。
+- 将DecorView添加到Window中显示
+    - 和Activity一样，都是在自身要出现在前台时才会将添加Window。
+    - Dialog.show() 方法：完成DecorView的显示。
+    - WindowManager.remoteViewImmediate() 方法：当Dialog被dismiss时移除DecorView。
+
+
 
 
 ### 04.视图View创建
