--- a/Read/ReadMeWiki/06.Framework/07.WMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framework/07.WMS机制深入分析.md
@@ -16,13 +16,10 @@
     - 3.3 WMS是如何启动
     - 3.4 WMS构造方法
     - 3.5 WMS窗口管理
-- 04.Window渲染过程
-    - 4.1 Window创建过程
-    - 4.2 Window显示过程
-    - 4.3 Act中Window创建过程
-    - 4.4 Dialog中Window创建过程
 - 05.一些源码分析
-    - 5.1 addView和removeView
+    - 5.1 addView源码分析
+    - 5.2 remove源码与解析
+
 
 
 
@@ -179,89 +176,14 @@
 
 
 
-### 04.Window渲染过程
-#### 4.1 Window创建过程
-- Window创建流程图如下所示
-    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMjExNDkz)
-- 大概重要流程介绍
-    >ActivityThread.handleLaunchActivity()
-    >ActivityThread.performLaunchActivity()
-        >mInstrumentation.newActivity 使用反射创建Activity
-        >activity.attach 这里会调用Activity中attach方法
-    >Activity.attach()
-         >mWindow = new PhoneWindow 这里创建所属的PhoneWindow
-         >mWindow.setWindowManager  设置并获取 WindowManagerImpl 对象
-- 一些核心流程
-    - 在 Activity 创建过程中执行 scheduleLaunchActivity() 之后便调用到了 handleLaunchActivity() 方法。
-    - 在 Android 中，Window 是个抽象的概念， Android 中 Window 的具体实现类是 PhoneWindow
-    - 得到一个 WindowManager 对象，WindowManager 是一个抽象类，这个 WindowManager 的具体实现是在 WindowManagerImpl 中，对比 Context 和 ContextImpl。
-- mWindow.setWindowManager流程分析
-    - 每个 Activity 会有一个 WindowManager 对象，这个 mWindowManager 就是和 WindowManagerService 进行通信，也是 WindowManagerService 识别 View 具体属于那个 Activity 的关键，创建时传入 IBinder 类型的 mToken。
-    - 这个 Activity 的 mToken，这个 mToken 是一个 IBinder，WindowManagerService 就是通过这个 IBinder 来管理 Activity 里的 View。
 
 
-
-#### 4.2 Window显示过程
-- Window显示流程图如下所示。主要是讲解activity中Window显示过程
-    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMjUyOTk1)
-- 大概重要流程介绍
-    >ActivityThread.handleResumeActivity()
-    >ActivityThread.performResumeActivity()     执行到 onResume()
-    >r.activity.makeVisible()   添加视图
-    >Activity.makeVisible()     
-         >wm.addView   将decorView添加到Window窗口上
-         >mDecor.setVisibility(View.VISIBLE)    设置mDecor可见
-- WindowManager的addView流程
-    - WindowManager 的 addView 的具体实现在 WindowManagerImpl 中，而 WindowManagerImpl 的 addView 又会调用 WindowManagerGlobal.addView()。
-- WindowManagerGlobal.addView()
-    ``` java
-    public void addView(View view, ViewGroup.LayoutParams params,Display display, Window parentWindow) {
-        ViewRootImpl root = new ViewRootImpl(view.getContext(), display);        
-        view.setLayoutParams(wparams);    
-        mViews.add(view);    
-        mRoots.add(root);    
-        mParams.add(wparams);        
-        root.setView(view, wparams, panelParentView);
-    }
-    ```
-    - 这个过程创建一个 ViewRootImpl，并将之前创建的 DecoView 作为参数传入，以后 DecoView 的事件都由 ViewRootImpl 来管理了，比如，DecoView 上添加 View，删除 View。ViewRootImpl 实现了 ViewParent 这个接口，这个接口最常见的一个方法是 requestLayout()。
-    - ViewRootImpl 是个 ViewParent，在 DecoView 添加的 View 时，就会将 View 中的 ViewParent 设为 DecoView 所在的 ViewRootImpl，View 的 ViewParent 相同时，理解为这些 View 在一个 View 链上。所以每当调用 View 的 requestLayout()时，其实是调用到 ViewRootImpl，ViewRootImpl 会控制整个事件的流程。可以看出一个 ViewRootImpl 对添加到 DecoView 的所有 View 进行事件管理。
-
-
-
-#### 4.3 Act中Window创建过程
-- Activity中Window创建过程
-    - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMzE3ODMx)
-- Window 是什么？
-    - Window 是 Android 中窗口的宏观定义，主要是管理 View 的创建，以及与 ViewRootImpl 的交互，将 Activity 与 View 解耦。
-- Activity 与 PhoneWindow 与 DecorView 之间什么关系？
-    - 一个 Activity 对应一个 Window 也就是 PhoneWindow，一个 PhoneWindow 持有一个 DecorView 的实例，DecorView 本身是一个 FrameLayout。
-- Window状态如何传给Activity
-    - Activity实现了window的callback接口，因此外界状态改变时会回调Activity的方法(onAttachedToWindow、dispatchTouchEvent等等)
-
-
-
-#### 4.4 Dialog中Window创建过程
-- Dialog的Window创建过程?
-    - 创建Window——同样是通过PolicyManager的makeNewWindow方法完成，与Activity创建过程一致
-    - 初始化DecorView并将Dialog的视图添加到DecorView中——和Activity一致(setContentView)，同样是通过Window.setContentView() 来实现。
-    - 将DecorView添加到Window中并显示——在Dialog的show方法中，通过WindowManager将DecorView添加到Window中(mWindowManager.addView(mDecor, 1))
-    - Dialog关闭时会通过WindowManager来移除DecorView：mWindowManager.removeViewImmediate(mDecor)
-    - Dialog必须采用Activity的Context，因为有应用token(Application的Context没有应用token)，也可以将Dialog的Window通过type设置为系统Window就不再需要token。
-- 为什么Dialog不能用Application的Context？
-    - Dialog本身的Token为null，在初始化时如果是使用Application或者Service的Context，在获取到WindowManager时，获取到的token依然是null。
-    - Dialog如果采用Activity的Context，获取到的WindowManager是在activity.attach()方法中创建，token指向了activity的token。
-    - 因为通过Application和Service的Context将无法获取到Token从而导致失败。
-- 将DecorView添加到Window中显示
-    - 和Activity一样，都是在自身要出现在前台时才会将添加Window。
-    - Dialog.show() 方法：完成DecorView的显示。
-    - WindowManager.remoteViewImmediate() 方法：当Dialog被dismiss时移除DecorView。
 
 
 
 
 ### 05.一些源码分析
-#### 5.1 addView和removeView
+#### 5.1 addView源码分析
 - Window的addView源码分析？
     - WindowManager是一个接口，真正实现类是WindowManagerImpl，并最终以代理模式交给WindowManagerGlobal实现。
     - addView: 1-创建ViewRootImpl；2-将ViewRoot、DecorView、布局参数保存到WM的内部列表中；3-ViewRoot.setView()建立ViewRoot和DecorView的联系。
@@ -269,6 +191,10 @@
     - requestLayout：内部调用scheduleTraversals(), 底层通过mChoreographer去监听下一帧的刷新信号。
     - mWindowSession.addToDisplay: 执行WindowManagerService的addWindow
     - addWindow: 检查参数等设置;检查Token;将Token、Window保存到WMS中;将WindowState保存到Session中。
+
+
+
+#### 5.2 remove源码与解析
 - Window的remove源码与解析
     - WindowManager中提供了两种删除接口：removeView异步删除、removeViewImmediate同步删除(不建议使用)
     - 调用WMGlobal的removeView
