--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -37,6 +37,8 @@
     - ![image](https://img-blog.csdnimg.cn/6d7a25acd0d44157b2d177fb3616ec53.png)
 - 从启动到Activity创建Window的整体流程
     - ![image](https://imgconvert.csdnimg.cn/aHR0cDovL2ltZy5ibG9nLmNzZG4ubmV0LzIwMTgwMzAxMTAyMzE3ODMx)
+- Activity创建Surface流程
+    - ![image](https://img-blog.csdnimg.cn/c96f1b851d494ebb8fb4f5800a44875b.png)
 - Activity类与Context关系
     - Activity类是从ContextThemeWrapper类继承下来的，而ContextThemeWrapper类又是从ContextWrapper类继承下来的，最后ContextWrapper类又继承了Context类。
     - 这个ContextImpl对象首先是通过调用Activity类的成员函数attach传递到Activity组件内部，接着再依次通过调用父类ContextThemeWrapper和ContextWrapper的成员函数attachBaseContext来分别保存在它们的成员变量mBase中。
