--- a/Read/ReadMeWiki/06.Framework/07.WMS机制深入分析.md
+++ b/Read/ReadMeWiki/06.Framework/07.WMS机制深入分析.md
@@ -2,14 +2,11 @@
 - 01.快速了解WMS机制
     - 1.1 WMS是什么
     - 1.2 应用于那些场景
-    - 1.3 可以解决那些问题
+    - 1.3 WMS主要功能
     - 1.4 Window是什么
-- 02.WMS核心类说明
-    - 2.0 WMS有哪些核心类
-    - 2.1 Window类说明
-    - 2.2 PhoneWindow类说明
-    - 2.3 WindowManager类说明
-    - 2.8 InputManagerService
+    - 1.5 WMS整体框架
+- 02.WMS核心流程
+    - 2.1 WMS启动流程
 - 03.WMS流程分析
     - 3.1 Window添加View
     - 3.2 WMS核心职责
@@ -27,12 +24,6 @@
 #### 1.1 WMS是什么
 - 开发中各种UI显示异常的bug都可以在WMS体系中找到对应的解决办法和对应原理。
     - 因为WMS管理着所有的窗口，包括创建、删除和修改，以及将某个窗口设置为焦点窗口。
-- WMS为所有窗口分配Surface。
-    - 客户端向WMS添加一个窗口的过程，其实就是WMS为其分配一块Surface的过程，一块块Surface在WMS的管理下有序的排布在屏幕上。
-- Window的本质就是Surface。
-    - 管理Surface的显示顺序、尺寸、位置
-    - 管理窗口动画
-    - 输入系统相关：WMS是派发系统按键和触摸消息的最佳人选，当接收到一个触摸事件，它需要寻找一个最合适的窗口来处理消息，而WMS是窗口的管理者，系统中所有的窗口状态和信息都在其掌握之中，完成这一工作不在话下。
 - WMS(WindowManagerService)相关概念
     - Window:它是一个抽象类，具体实现类为 PhoneWindow ，它对 View 进行管理。Window是View的容器，View是Window的具体表现内容；
     - WindowManager:是一个接口类，继承自接口 ViewManager ，从它的名称就知道它是用来管理 Window 的，它的实现类为 WindowManagerImpl；
@@ -44,12 +35,20 @@
 - Activity页面渲染
     - Activity 启动后就可以看到我们写的 Layout 布局界面，Activity 从 setContentView() 加载布局到Window上，这个过程就涉及到WMS。
 - Dialog弹窗渲染
+    - 创建Dialog后，会去创建Window窗口，然后通过addView形式将视图添加到窗口上。这个过程就涉及到WMS。
+- 可以解决那些问题
+    - 如果你的定位是做界面开发，那么界面怎么来的？如何显示的？如何布局？如何渲染……要明白这些问题，WMS就是你必须掌握的内容。
 
 
-#### 1.3 可以解决那些问题
-- 如果你的定位是做界面开发，那么界面怎么来的？如何显示的？如何布局？如何渲染……要明白这些问题，WMS就是你必须掌握的内容。
-    - Window 是什么？
-    - Activity 与 PhoneWindow 与 DecorView 之间什么关系？
+#### 1.3 WMS主要功能
+- 主要功能
+    - Surface管理。为所有窗口分配Surface，客户端向WMS添加一个窗口的过程，其实就是WMS为其分配一块Surface的过程，一块块Surface在WMS的管理下有序的排布在屏幕上。Window的本质就是Surface。
+    - 管理窗口的显示顺序、尺寸、位置， 最终都会反馈SurfaceFlinger。
+    - 窗口动画, 包括进入，退出动画
+    - 输入系统中转站：WMS是派发系统按键和触摸消息的最佳人选，当接收到一个触摸事件，它需要寻找一个最合适的窗口来处理消息，而WMS是窗口的管理者，系统中所有的窗口状态和信息都在其掌握之中，完成这一工作不在话下。
+- 主要功能图
+    - ![image](https://img-blog.csdnimg.cn/0895873356574377aaeb15f773987a9e.png)
+
 
 
 #### 1.4 Window是什么
@@ -67,40 +66,19 @@
 
 
 
-### 02.WMS核心类说明
-#### 2.0 WMS有哪些核心类
-
-
-#### 2.1 Window类说明
-- Window是个抽象类，PhoneWindow是Window唯一的实现类。PhoneWindow像是一个工具箱，封装了三种工具：
-    - DecorView、WindowManager.LayoutParams、WindowManager。
-    - 其中DecorView和WindowManager.LayoutParams负责窗口的静态属性，比如窗口的标题、背景、输入法模式、屏幕方向等等。WindowManager负责窗口的动态操作，比如窗口的增、删、改。
-    - Window抽象类对WindowManager.LayoutParams相关的属性（如：输入法模式、屏幕方向）都提供了具体的方法。而对DecorView相关的属性（如：标题、背景），只提供了抽象方法，这些抽象方法由PhoneWindow实现。
-- Window并不是真实地存在着的，而是以View的形式存在。
-    - Window本身就只是一个抽象的概念，而View是Window的表现形式。要想显示窗口，就必须调用WindowManager.addView(View view, ViewGroup.LayoutParams params)。
-    - 参数view就代表着一个窗口。在Activity和Dialog的显示过程中都会调用到wm.addView(decor, l)；所以Activity和Dialog的DecorView就代表着各自的窗口。
-
-
-#### 2.2 PhoneWindow类说明
-
-
-#### 2.3 WindowManager类说明
-- 添加、更新、删除View
-    ```
-    public interface ViewManager{ 
-        public void addView(View view, ViewGroup.LayoutParams params); 
-        //添加View 
-        public void updateViewLayout(View view, ViewGroup.LayoutParams params); 
-        //更新View 
-        public void removeView(View view); 
-        //删除View 
-    }
-    ```
+### 1.5 WMS整体框架
+- WMS整体框架
+    - ![image](https://img-blog.csdnimg.cn/cdc18dca263f453a8685b722a855ba81.png)
+- WMS简单类图
+    - ![image](https://img-blog.csdnimg.cn/d6c216a5f2244b4d8f2926b68b0afc2d.png)
 
 
 
-#### 2.8 InputManagerService
-- IMS ，输入系统的管理者。IMS 会对触摸事件进行处理，他会寻找一个最合适的窗口来处理触摸反馈信息，WMS 是窗口管理者，因此 WMS 理所应当的成为了输入系统的中转站，WMS 包含了 IMS 的引用不足为怪。
+### 02.WMS核心流程
+#### 2.1 WMS启动流程
+- WMS启动流程
+    - ![image](https://img-blog.csdnimg.cn/1931e9ce6b3944f18146324af17a91e5.png)
+- 
 
 
 
