--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -19,7 +19,9 @@
     - 4.2 DecorView类实现
     - 4.3 窗口视图与ViewRoot
     - 4.4 窗口视图创建过程
-- 05.
+- 05.应用窗口与WMS
+    - 5.1 
+
 
 
 ### 01.Android组件UI实现
@@ -273,6 +275,12 @@
     > WindowManagerGlobal#addView()，这个里面会创建ViewRootImpl对象，一个View对象在与一个ViewRoot对象关联的同时，还会关联一个WindowManager.LayoutParams对象，这个WindowManager.LayoutParams对象是用来描述应用程序窗口视图的布局属性的。
     > WindowManagerGlobal#addView#root.setView，将这个View对view象和这个WindowManager.LayoutParams对象，以及变量panelParentView所描述的一个父应用程序窗视图对象，保存在这个ViewRoot对象root的内部
     > ViewRootImpl#setView()，调用requestLayout来请求对应用程序窗口视图的UI作第一次布局。调用静态成员变量sWindowSession所描述的一个类型为Session的Binder代理对象的成员函数add来请求WindowManagerService增加一个WindowState对象，以便可以用来描述当前正在处理的一个ViewRoot所关联的一个应用程序窗口。
+
+
+
+### 05.应用窗口与WMS
+- https://www.kancloud.cn/alex_wsc/androids/473773
+
 
 
 
