--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -76,6 +76,12 @@
 ### 03.Socket实践思路
 #### 3.1 基础实践步骤
 - Socket可基于TCP或者UDP协议，但TCP更加常用。所以下面的使用步骤 & 实例的Socket将基于TCP协议。
+    - 第一步：
+    - 第二步：
+    - 第三步：
+
+
+
 
 
 ### 04.通信实践坑
