--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -21,7 +21,8 @@
     - 4.4 窗口视图创建过程
 - 05.应用窗口与WMS
     - 5.1 
-
+- 06.Surface创建过程
+    - 6.1 
 
 
 ### 01.Android组件UI实现
@@ -284,7 +285,8 @@
 
 
 
-
+### 06.Surface创建过程
+- https://www.kancloud.cn/alex_wsc/androids/473774
 
 
 
