--- a/Read/ReadMeWiki/08.思考系列/10.数据存储方案反思.md
+++ b/Read/ReadMeWiki/08.思考系列/10.数据存储方案反思.md
@@ -200,6 +200,11 @@
     - mmap的数据写入依靠着这个系统调用保证，即当前进程被异常销毁了，也可以通过这个系统级别的调用，把属于内存映射的脏页数据写回去磁盘。
 - mmap系统写入数据一定靠谱嘛
     - 虽然这个刷新动作是由linux系统进行刷入的，保证了进程出问题的时候，也能够在系统级别刷入数据，但是这个也不是百分百可靠的，因为这个刷入操作是没有备份操作的/异常容灾处理，如果系统异常或者断电的情况，就会出现错误数据或者没有完全刷入磁盘的数据，造成数据异常。
+- Linux内核不会主动将mmap修改后的内容同步到磁盘文件中，有4个时机会触发mmap映射同步到磁盘：
+    - 调用 msync 函数主动进行数据同步（主动）
+    - 调用 munmap 函数对文件进行解除映射关系时（主动）
+    - 进程退出时（被动）
+    - 系统关机时（被动）
 
 
 
