--- a/Read/ReadMeWiki/06.Framework/29.Binder机制深入理解.md
+++ b/Read/ReadMeWiki/06.Framework/29.Binder机制深入理解.md
@@ -3,7 +3,8 @@
 - 01.Binder的背景介绍
     - 1.1 为何会有Binder
     - 1.2 什么是Binder
-    - 1.3 为什么要用Binder
+    - 1.3 常见进程通信
+    - 1.4 为什么要用Binder
 - 02.Binder工作流程
     - 2.1 Binder运行机制
     - 2.2 工作流程介绍
@@ -13,12 +14,29 @@
     - 3.1 Binder设计流程
     - 3.2 Binder设计思考
 - 04.Binder源码流程
+    - 4.1 Binder通信原理图
+    - 4.2 Binder传输数据流程
+    - 4.3 Binder安全校验
+
+
+
+
+### 00.先思考一些问题
+- 01.为什么会有Binder？不在同一个进程中的Activity和Service(比如把服务定义成一个独立进程)是如何通信的？
+- 02.Binder的设计思想是什么？多进程通信有哪些方式？为什么在Android系统中要是用Binder通信，有什么优缺点？
+
 
 
 ### 01.Binder的背景介绍
 #### 1.1 为何会有Binder
 - 每一个应用程序都是由一些Activity和Service组成的，这些Activity和Service有可能运行在同一个进程中，也有可能运行在不同的进程中。
-- 那么，不在同一个进程的Activity或者Service是如何通信的呢？这就是要介绍的Binder进程间通信机制。
+- 作为一名Android开发，我们每天都在和Binder打交道，虽然可能有的时候不会注意到，譬如：
+    - startActivity的时候，会获取AMS服务，调用AMS服务的startActivity方法
+    - startActivity传递的对象为什么需要序列化
+    - bindService为什么回调的是一个IBinder对象
+    - 多进程应用，各个进程之间如何通信
+    - AIDL的使用
+- 它们都和Binder有着莫切关系，当碰到上面的场景，或者一些疑难问题的时候，理解Binder机制是非常有必要的。这就是要介绍的Binder进程间通信机制。
 
 
 
@@ -29,9 +47,29 @@
 - 4.从Android应用层来说，Binder是客户端和服务端进行通信的媒介，当你bindService的时候，服务端会返回一个包含了服务端业务调用的Binder对象，通过这个Binder对象，客户端就可以获取服务端提供的服务或者数据，这里的服务包括普通服务和基于AIDL的服务。
 
 
-#### 1.3 为什么要用Binder
+
+#### 1.3 常见进程通信
 - 在传统的Linux上，我们还是有很多选择可以用来实现进程间通信
-    - 如管道、SystemV、Socket等。那么Android为什么不使用这些原有的技术，而是要使开发一种新的叫Binder的进程间通信机制呢？
+    - 如管道、SystemV、Socket、共享内存等。那么Android为什么不使用这些原有的技术，而是要使开发一种新的叫Binder的进程间通信机制呢？
+- 共享内存
+    - 什么是共享内存：共享内存是进程间通信中最简单的方式之一，共享内存允许两个或更多进程访问同一块内存，当一个进程改变了这块地址中的内容的时候，其它进程都会察觉到这个更改。
+    - ![image](https://img-blog.csdnimg.cn/de5fdeba709548b4b7148001a2e01db2.png)
+    - 性能和安全分析：因为共享内存是访问同一块内存，所以数据不需要进行任何复制，是IPC几种方式中最快，性能最好的方式。由于能任意的访问和修改内存中的数据，如果有恶意程序去针对某个程序设计代码，很可能导致隐私泄漏或者程序崩溃，所以安全性较差。
+- 管道
+    - 什么叫做管道：它具有固定的读端和写端，写进程通过写段向管道文件里写入数据，读进程通过读段从读进程中读出数据，构成一条数据传递的流水线。
+    - ![image](https://img-blog.csdnimg.cn/91131cf0fe5c45fc96342c7bf598749d.png)
+    - 性能和安全分析：管道一次通信需要经历2次数据复制（进程A -> 管道文件，管道文件 -> 进程B）。管道的读写分阻塞和非阻塞，管道创建会分配一个缓冲区，而这个缓冲区是有限的，如果传输的数据大小超过缓冲区上限，或者在阻塞模式下没有安排好数据的读写，会出现阻塞的情况。
+- 消息队列
+    - 什么叫消息队列：消息队列是存放在内核中的消息链表，每个消息队列由消息队列标识符表示。消息队列允许多个进程同时读写消息，发送方与接收方要约定好，消息体的数据类型与大小。
+    - ![image](https://img-blog.csdnimg.cn/img_convert/a4ffff7c90f108654b8c593208021179.png)
+    - 性能和安全分析：消息队列克服了信号承载信息量少、管道只能承载无格式字节流等缺点，消息队列一次通信同样需要经历2次数据复制（进程A -> 消息队列，消息队列 -> 进程B）
+- Socket
+    - 什么是Socket：Socket原本是为了网络设计的，但也可以通过本地回环地址 (127.0.0.1) 进行进程间通信。
+    - ![image](https://img-blog.csdnimg.cn/f9c36727e9154fd5862a674455a864e6.png)
+    - 一个Socket会拥有两个缓冲区，一读一写，由于发送/接收消息需要将一个Socket缓冲区中的内容拷贝至另一个Socket缓冲区，所以Socket一次通信也是需要经历2次数据复制。
+
+
+#### 1.4 为什么要用Binder
 - 最简单的回答：
     - **性能：相比传统的Socket更高效；安全：安全性高，支持通信双方进行身份验证**。
 - 性能方面的优势
@@ -44,9 +82,11 @@
 - 为何说Binder相比传统的Socket性能更高效？
     - 跨进程通讯中，只有socket支持Client-Server的通信方式，但是socket作为一款通用接口，其传输效率低，开销大，主要用在跨网络的进程间通信和本机上进程间的低速通信。
     - 消息队列和管道采用存储-转发方式，即数据先从发送方缓存区拷贝到内核开辟的缓存区中，然后再从内核缓存区拷贝到接收方缓存区，至少有两次拷贝过程。
-    - 共享内存虽然无需拷贝，但控制复杂，难以使用。
+    - 共享内存虽然无需拷贝，但控制复杂，难以使用，而且相对来说特别不安全。
 - 为何说Binder相比传统IPC安全性更高？
-    - 首先传统IPC的接收方无法获得对方进程可靠的UID和PID（用户ID进程ID），从而无法鉴别对方身份。Android为每个安装好的应用程序分配了自己的UID，故进程的UID是鉴别进程身份的重要标志。使用传统IPC只能由用户在数据包里填入UID和PID，但这样不可靠，容易被恶意程序利用。可靠的身份标记只有由IPC机制本身在内核中添加。其次传统IPC访问接入点是开放的，无法建立私有通道。比如命名管道的名称，systemV的键值，socket的ip地址或文件名都是开放的，只要知道这些接入点的程序都可以和对端建立连接，不管怎样都无法阻止恶意程序通过猜测接收方地址获得连接。
+    - 首先传统IPC的接收方无法获得对方进程可靠的UID和PID（用户ID进程ID），从而无法鉴别对方身份。Android为每个安装好的应用程序分配了自己的UID，故进程的UID是鉴别进程身份的重要标志。
+    - 使用传统IPC只能由用户在数据包里填入UID和PID，但这样不可靠，容易被恶意程序利用。可靠的身份标记只有由IPC机制本身在内核中添加。其次传统IPC访问接入点是开放的，无法建立私有通道。
+    - 比如命名管道的名称，systemV的键值，socket的ip地址或文件名都是开放的，只要知道这些接入点的程序都可以和对端建立连接，不管怎样都无法阻止恶意程序通过猜测接收方地址获得连接。
     - 基于以上原因，Android需要建立一套新的IPC机制来满足系统对通信方式，传输性能和安全性的要求，这就是Binder。
     - Binder基于Client-Server通信模式，传输过程只需一次拷贝，为发送发添加UID/PID身份，既支持实名Binder也支持匿名Binder，安全性高。
 
@@ -115,7 +155,7 @@
     - Service Manager是如何为Client提供服务的？即IServiceManager::getService接口是如何实现的。
 
 
-#### 3.4 Binder如何进行线程管理
+#### 3.4 Binder线程管理
 - Binder中是如何进行线程管理的？ 
     - 每个Binder的Server进程会创建很多线程来处理Binder请求，可以简单的理解为创建了一个Binder的线程池吧（虽然实际上并不完全是这样简单的线程管理方式），而真正管理这些线程并不是由这个Server端来管理的，而是由Binder驱动进行管理的。
     - 一个进程的Binder线程数默认最大是16，超过的请求会被阻塞等待空闲的Binder线程。理解这一点的话，你做进程间通信时处理并发问题就会有一个底，比如使用ContentProvider时（又一个使用Binder机制的组件），你就很清楚它的CRUD（创建、检索、更新和删除）方法只能同时有16个线程在跑。
@@ -126,6 +166,26 @@
 
 
 ### 04.Binder源码流程
+#### 4.1 Binder通信原理图
+- Binder底层使用到mmap
+    - Binder是基于内存映射mmap设计实现的，通过这种方式，直接操作映射的这一部分内存，通过mmap，Binder通信时，只需要经历一次数据复制，从而获得更好的性能。
+- 一次Binder IPC通信的过程分为以下几个步骤：
+    - 首先，Binder驱动在内核空间中开辟出一个数据接收缓冲区
+    - 接着，在内核空间中开辟出一个内核缓冲区
+    - 将内核缓冲区与数据接收缓冲区建立映射关系
+    - 将数据接收缓冲区与接收进程的用户空间地址建立映射关系
+    - 发送方进程通过copy_from_user将数据从用户空间复制到内核缓冲区
+    - 由于内核缓冲区与数据接收缓冲区有映射关系，同时数据接收缓冲区与接收进程的用户空间地址有映射关系，所以在接收进程中可以直接获取到这段数据
+- 这样便完成了一次Binder IPC通信，它的原理如下图所示：
+    - ![image](https://img-blog.csdnimg.cn/89daba855ff04d35a7359f70cd252b3e.png)
+
+
+
+
+
+
+
+
 
 
 
