--- a/Read/ReadMeWiki/09.问题面试/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/03.Android问题汇总.md
@@ -190,12 +190,12 @@
 ### 15.Android进程IPC
 - 常见的跨进程通信方式，AIDL的实现原理？AIDL解决了什么问题？AIDL如何使用？多进程场景遇见过么？谈谈对进程共享和线程安全的认识……
 - 说一下你对IPC机制的理解？如果一个APP里面有多进程存在，请列举你所知道的全部IPC方法……
-- 说一下Binder大概是怎么实现的？既然有现有的IPC方式，为什么重新设计一套Binder机制呢。
-- Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？
-- Binder内核所在的进程是如何找到到Server跟Client进行通信的
-- ServiceManager是一个单独的进程，那么Server与ServiceManager通讯是靠什么呢？
-- Android Binder机制是做什么的，为什么选用Binder，原理了解吗？
-- Binder机制详解，用Binder中mmap思想解决你的APP卡顿问题？
+- 01.为什么会有Binder？不在同一个进程中的Activity和Service(比如把服务定义成一个独立进程)是如何通信的？
+- 02.Binder的设计思想是什么？多进程通信有哪些方式？为什么在Android系统中要是用Binder通信，有什么优缺点？
+- 03.进程通信有共享内存，管道，socket，消息队列。他们的原理大概都是什么样的？Binder中使用mmap是什么东西？
+- 04.既然有现有的IPC方式，为什么重新设计一套Binder机制呢。是否用Binder中mmap思想解决你的APP卡顿问题？
+- 05.Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？Binder内核所在的进程是如何找到到Server跟Client进行通信的？
+
 
 
 
