--- a/Read/ReadMeWiki/06.Framework/29.Binder机制深入理解.md
+++ b/Read/ReadMeWiki/06.Framework/29.Binder机制深入理解.md
@@ -25,8 +25,9 @@
 ### 00.先思考一些问题
 - 01.为什么会有Binder？不在同一个进程中的Activity和Service(比如把服务定义成一个独立进程)是如何通信的？
 - 02.Binder的设计思想是什么？多进程通信有哪些方式？为什么在Android系统中要是用Binder通信，有什么优缺点？
-- 03.进程通信有共享内存，管道，socket，消息队列。他们的原理大概都是什么样的？
-
+- 03.进程通信有共享内存，管道，socket，消息队列。他们的原理大概都是什么样的？Binder中使用mmap是什么东西？
+- 04.既然有现有的IPC方式，为什么重新设计一套Binder机制呢。是否用Binder中mmap思想解决你的APP卡顿问题？
+- 05.Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？Binder内核所在的进程是如何找到到Server跟Client进行通信的？
 
 
 ### 01.Binder的背景介绍
