--- a/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
+++ b/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
@@ -10,6 +10,7 @@
     - 4.1 performLayout源码
 - 05.performDraw绘制
     - 5.1 performDraw源码
+    - 5.2 draw布局流程
 - 06.View绘制流程总结下
     - 6.1 Activity布局绘制
 - 07.View如何显示在屏幕
@@ -144,7 +145,7 @@
 
 
 
-
+#### 5.2 draw布局流程
 - ViewRootImpl.performTraversals()真正的绘制
     - 调用relayoutWindow()：
     - 创建用户java层的surface：只有用户提供的画面数据；
