--- a/Read/ReadMeWiki/06.Framework/29.Binder机制深入理解.md
+++ b/Read/ReadMeWiki/06.Framework/29.Binder机制深入理解.md
@@ -15,8 +15,7 @@
     - 3.2 Binder设计思考
 - 04.Binder源码流程
     - 4.1 Binder通信原理图
-    - 4.2 Binder传输数据流程
-    - 4.3 Binder安全校验
+    - 4.2 Binder安全校验
 
 
 
@@ -183,7 +182,15 @@
     - ![image](https://img-blog.csdnimg.cn/89daba855ff04d35a7359f70cd252b3e.png)
 
 
-
+#### 4.2 Binder安全校验
+- 下图展示Binder IPC架构的一个简单例子。
+    - ![image](https://img-blog.csdnimg.cn/1b40ab5af9c742d8906335175c6f0050.png)  
+    - 每个通过Binder框架实现IBinder接口，允许被访问调用的对象都可被称作Binder对象。对Binder对象的调用在一个Binder事务处理（transaction）内部实现，其中包括一个对目标对象的引用、需执行方法的ID和一个数据缓冲区。
+- 如何保证Binder安全性
+    - Binder驱动会将调用进程的ID（PID）和有效用户ID（EUID）自动添加到事务处理数据。被调用进程可以检查PID和EUID，然后基于内部实现逻辑来决定是否执行所请求的方法。
+    - 因为PID和EUID是由内核填写的，所以调用者进程不能通过伪造身份标识来获取超出系统允许的权限。这是Android安全模型的核心之一，所有更高层次抽象，比如权限，均是建立在它之上。
+    - 调用者的PID和EUID通过类android.os.Binder的getCallingPid()和getCallingUid()来访问，他们是Android公开API的一部分。
+      
 
 
 
