--- a/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
+++ b/Read/ReadMeWiki/06.Framework/06.Android应用窗口.md
@@ -25,6 +25,13 @@
     - 6.1 
 
 
+
+### 00.问题答疑思考
+- Activity、PhoneWindow、DecorView、ViewRootImpl 之间的关系？四者的创建时机？
+
+
+
+
 ### 01.Android组件UI实现
 #### 1.1 组件的UI实现介绍
 - Activity组件的UI实现需要与WindowManagerService服务和SurfaceFlinger服务进行交互。
