--- a/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
+++ b/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
@@ -1,16 +1,22 @@
 # View绘制流程分析
 #### 目录介绍
 - 01.addView的流程分析
+    - 1.1 wm.addView()流程
 - 02.requestLayout绘制
     - 2.1 源码流程分析
     - 2.2 View绘制流程简析
 - 03.performMeasure测量
     - 3.1 performMeasure源码
+    - 3.2 measure设计思路
+    - 3.3 measure测量流程
 - 04.performLayout布局
     - 4.1 performLayout源码
+    - 4.2 layout布局流程
+    - 4.3 layout设计思路
 - 05.performDraw绘制
     - 5.1 performDraw源码
     - 5.2 draw布局流程
+    - 5.3 draw设计思路
 - 06.View绘制流程总结下
     - 6.1 Activity布局绘制
 - 07.View如何显示在屏幕
@@ -18,11 +24,19 @@
 
 
 ### 00.问题答疑思考
+- requestLayout、invalidate与postInvalidate作用与区别，在requestLayout这个方法里面做了什么？
+- requestLayout，onLayout，onDraw，DrawChild区别与联系？drawChild()是做什么用的？
+- LinerLayout跟RelativeLayout的绘制原理？RelativeLayout两次都测量什么……？
+- View绘制流程，当一个TextView的实例调用setText()方法后执行了什么？请说一下原理……
+- 什么是MeasureSpec，主要作用是什么？包含三种布局模式分别是什么？getWidth()方法和getMeasureWidth()区别呢？
+- View是如何绘制到屏幕上的？View的刷新机制是什么，有哪些重要的方法？
+- Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
 
 
 
 
 ### 01.addView的流程分析
+#### 1.1 wm.addView()流程
 - 通过WindowManager添加View分析
     > wm.addView()，根据WindowManagerImpl --> WindowManager --> ViewManager，最终可知vm是WindowManagerImpl的实例，具体看WindowManagerImpl的addView方法
     > WindowManagerImpl#addView()，在这个类中可以看到调用了mGlobal.addView()，而mGlobal是WindowManagerGlobal的对象。
@@ -97,8 +111,32 @@
         - 这样经过一系列的循环遍历过程，如果是ViewGroup就会调用其ViewGroup的onMeasure方法，若果是View组件就会调用View的onMeasure方法
     > View#onMeasure()，调用了setMeasuredDimension方法设置测量的结果
     > View#setMeasuredDimension()，在这个方法中调用了setMeasuredDimensionRaw方法，把View组件即其子View的大小测量出来了，并且保存在了成员变量mMeasuredWith和mMeasuredHeight中
+- 需要注意测量最后一定要调用setMeasuredDimension()
+    - Android提供了setMeasureDimension()函数，将测量结果作为参数并调用该函数，便可以视为View完成了自身的测量。该方法的本质就是将测量结果存起来，以便后续的layout和draw流程中获取控件的宽高。
 
 
+
+#### 3.2 measure设计思路
+- View的测量目标便是测量控件的宽高值，View的设计者通过代码编织了一整套复杂的逻辑：
+    - 1、对于子View而言，其本身宽高直接受限于父View的布局要求，举例来说，父View被限制宽度为40px，子View的最大宽度同样也需受限于这个数值。因此，在测量子View之时，子View必须已知父View的布局要求，这个 布局要求， Android中通过使用 MeasureSpec 类来进行描述。
+    - 2.1、对于完整的测量流程而言，父控件必然依赖子控件宽高的测量；若子控件本身未测量完毕，父控件自身的测量亦无从谈起。Android中View的测量流程中使用了非常经典的 递归思想：对于一个完整的界面而言，每个页面都映射了一个View树，其最顶端的父控件测量开始时，会通过 遍历 将其 布局要求 传递给子控件，以开始子控件的测量，子控件在测量过程中也会通过 遍历 将其 布局要求 传递给它自己的子控件，如此往复一直到最底层的控件...这种通过遍历自顶向下传递数据的方式我们称为 测量过程中的“递”流程。
+    - 2.2、当最底层位置的子控件自身测量完毕后，其父控件会将所有子控件的宽高数据进行聚合，然后通过对应的 测量策略 计算出父控件本身的宽高，测量完毕后，父控件的父控件也会根据其所有子控件的测量结果对自身进行测量，这种从底部向上传递各自的测量结果，最终完成最顶层父控件的测量方式我们称为测量过程中的“归”流程，至此界面整个View树测量完毕。
+- 需要注意的是，子控件的测量过程本身还应该依赖于父控件的一些布局约束，比如：
+    - 1.父控件固定宽高只有${x}px，子控件设置为layout_height="${y}px";
+    - 2.父控件高度为wrap_content(包裹内容)，子控件设置为layout_height="match_parent";
+    - 3.父控件高度为match_parent(填充)，子控件设置为layout_height="match_parent";
+    - 这些情况下，因为无法计算出准确控件本身的宽高值，简单的通过setMeasuredDimension()函数似乎不可能达到测量控件的目的，因为 子控件的测量结果是由父控件和其本身共同决定的，而父控件对子控件的布局约束，便是前文提到的 布局要求，即MeasureSpec类。
+- 测量流程中对布局的设计是通过MeasureSpec类来对其进行描述
+    - 在设计的过程中，我们将布局要求分成了2个属性。测量大小 意味着控件需要对应大小的宽高，测量模式 则表示控件对应的宽高模式：
+    - UNSPECIFIED：父元素不对子元素施加任何束缚，子元素可以得到任意想要的大小；日常开发中自定义View不考虑这种模式，可暂时先忽略；
+    - EXACTLY：父元素决定子元素的确切大小，子元素将被限定在给定的边界里而忽略它本身大小；这里我们理解为控件的宽或者高被设置为 match_parent 或者指定大小，比如20dp；
+    - AT_MOST：子元素至多达到指定大小的值；这里我们理解为控件的宽或者高被设置为wrap_content。
+- MeasureSpec用一个32位int值来表示布局要求描述
+    
+
+
+
+#### 3.3 measure测量流程
 
 
 
@@ -110,6 +148,10 @@
     > FrameLayout#onLayout()，调用了layoutChildren方法
     > FrameLayout#layoutChildren()，在这个方法中，遍历执行View的layout方法，若是ViewGroup则执行具体的ViewGroup的layout方法，若是View，则执行View的layout方法
     > View#layout()，经过layout方法，如果是View组件的话就已经将View组件的位置信息计算出来并保存在对象的成员变量中
+
+
+#### 4.2 layout布局流程
+
 
 
 
